--- a/styles.css
+++ b/styles.css
@@ -60,8 +60,8 @@ header {
 
 #nav-bar {
   display: flex;
-  gap: 80px;
-  justify-content: space-around;
+  gap: 20px;
+  justify-content: space-evenly;
 }
 
 .nav-link {
@@ -71,6 +71,7 @@ header {
   padding: 10px 20px;
   text-align: end;
   align-self: center;
+  margin-right: 40px;
 }
 
 section {
@@ -89,10 +90,6 @@ section {
   align-items: center;
   text-align: center;
   font-size: 20px;
-}
-
-.place-holder {
-  font-size: 200px;
 }
 
 #form {
@@ -118,6 +115,10 @@ section {
   background-color: rgb(89, 255, 47);
 }
 
+#features h2 {
+  margin-bottom: 50px;
+}
+
 .feature {
   display: flex;
   align-items: center;
@@ -141,7 +142,7 @@ section {
 }
 
 iframe {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 #products {
@@ -153,19 +154,21 @@ iframe {
 
 .product {
   border: 1px solid #000000;
-  padding: 40px;
   text-align: center;
   width: 300px;
   background-color: #f9f9f9;
+  padding-bottom: 20px;
 }
 
 h3 {
-  margin: 10px 0 10px 0;
+  margin: 0;
 }
 
 .product h3 {
   font-size: 24px;
   margin-bottom: 10px;
+  background-color: #ddd;
+  padding: 10px 40px;
 }
 
 .price {
@@ -177,18 +180,76 @@ h3 {
 .product button {
   background-color: #4CAF50;
   color: white;
+  font-size: 18px;
   padding: 10px 20px;
+  margin: 10px 0;
   border: none;
   cursor: pointer;
 }
 
+footer {
+  background-color: #ddd;
+  padding: 15px;
+  margin-top: 20px;
+}
+
+ul {
+  display: flex;
+  justify-content: flex-end;
+  gap: 40px;
+}
+
+li {
+  list-style: none;
+}
+
+footer p {
+  display: flex;
+  justify-content: flex-end;
+}
+
 @media (max-width: 768px) {
-  .products {
-    margin-bottom: 20px;
+  header {  
+    flex-wrap: wrap;
   }
 
   #nav-bar {
     flex-direction: column;
     align-items: center;
+  }
+
+  .nav-link {
+    margin-bottom: 10px;
+  }
+
+  .product {
+    width: 100%;
+    margin: 10px;
+    height: 300px;
+  }
+
+  .feature img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+
+  .feature-text {
+    width: 100%;
+  }
+
+  .container {
+    flex-direction: column;
+  }
+
+  .image {
+    width: 100%;
+  }
+  #header-img {
+    width: 80%; 
+  }
+
+  .product p {
+    font-size: 16px;
   }
 }
