--- a/styles.css
+++ b/styles.css
@@ -17,70 +17,52 @@ body {
 }
 
 header {
+  display: flex;
+  padding: 0px 20px;
+  background-color: #f0f0f0;
+  color: #000000;
+  height: 80px;
+  justify-content: space-between;
+  align-items: center;
   position: sticky;
   top: 0;
-  background-color: #f0f0f0;
-  color: #000000;
-  height: 80px;
-  width: 100%;
-  flex: 5px;
-  justify-content: space-between;
-}
-
-header {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-  background-color: #f0f0f0;
-  color: #000000;
-  height: 80px;
-  width: 100%;
-  flex: 5px;
-  justify-content: space-between;
-  position: sticky;
-  z-index: 100;
+  min-height: 80px;
 }
 
 #header1 {
   display: flex;
   flex: 4;
-  align-self: center;
-  justify-content: space-between;
+
 }
 
 #header-img {
-  height: 6em;
-  width: 30em;
+  height: 4em;
+  width: 20em;
 }
 
 #header2 {
   display: flex;
-  flex: 1.5;
+  flex: 1;
 }
 
 #nav-bar {
   display: flex;
   gap: 20px;
-  justify-content: space-evenly;
 }
 
 .nav-link {
   color: #000000;
   font-size: 20px;
   text-decoration: none;
-  padding: 10px 20px;
   text-align: end;
   align-self: center;
-  margin-right: 40px;
 }
 
 section {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  align-items: center;
-  height: auto;
-  overflow-y: auto;
+  width: 100%;
 }
 
 #contact {
@@ -117,6 +99,7 @@ section {
 
 #features h2 {
   margin-bottom: 50px;
+  align-self:center;
 }
 
 .feature {
@@ -126,9 +109,8 @@ section {
 }
 
 .feature img {
-  width: 200px;
-  height: 100px;
-  margin-right: 60px;
+  width: 120px;
+  height: 5rem;
 }
 
 .feature-text {
@@ -143,16 +125,19 @@ section {
 
 iframe {
   margin-bottom: 50px;
+  align-self:center
 }
 
 #products {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  gap: 70px;
+  justify-content: space-around;
+  gap: 20px;
 }
 
 .product {
+  display: flex;
+  flex-direction: column;
   border: 1px solid #000000;
   text-align: center;
   width: 300px;
@@ -178,6 +163,9 @@ h3 {
 }
 
 .product button {
+  display: flex;
+  justify-content: flex-end;
+  align-self:center;
   background-color: #4CAF50;
   color: white;
   font-size: 18px;
