--- a/styles.css
+++ b/styles.css
@@ -106,15 +106,21 @@ section {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  justify-content: center;
+  gap: 20px;
 }
 
 .feature img {
   width: 120px;
-  height: 5rem;
+  height: 5.5rem;
 }
 
 .feature-text {
   width: 1000px;
+}
+
+.paragraph {
+  margin-right: 3em;
 }
 
 .feature-text p {
@@ -131,8 +137,11 @@ iframe {
 #products {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: auto;
+  gap: 10px;
 }
 
 .product {
@@ -196,48 +205,67 @@ footer p {
   justify-content: flex-end;
 }
 
-@media (max-width: 768px) {
-  header {  
-    flex-wrap: wrap;
+@media (max-width: 767px) {
+  header {
+    flex-direction: column;
+    text-align: center;
+    height: auto;
   }
 
   #nav-bar {
+    display: flex;
     flex-direction: column;
-    align-items: center;
+}
+
+  #header-img {
+    width: 100%;
+    height: auto;
   }
 
-  .nav-link {
-    margin-bottom: 10px;
+  .paragraph {
+    margin-right: 3em;
+}
+
+  iframe {
+    width: 80vw;
+    margin-right: 3em;
+    margin-bottom: 50px;
+    align-self:center
+  }
+
+  #products {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: auto;
+    gap: 10px;
   }
 
   .product {
+    border: 1px solid #000000;
+    text-align: center;
     width: 100%;
-    margin: 10px;
-    height: 300px;
+    height: 17em;
+    background-color: #f9f9f9;
+    padding-bottom: 20px;
   }
 
-  .feature img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+  .product button {
+    display: flex;
+    align-self:center;
+    background-color: #4CAF50;
+    color: white;
+    font-size: 18px;
+    padding: 10px 20px;
+    margin: auto 0;
+    border: none;
+    cursor: pointer;
   }
 
-  .feature-text {
-    width: 100%;
-  }
-
-  .container {
-    flex-direction: column;
-  }
-
-  .image {
-    width: 100%;
-  }
-  #header-img {
-    width: 80%; 
-  }
-
-  .product p {
-    font-size: 16px;
-  }
+p {
+  margin: auto;
 }
+
+}    
