--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,7 @@ iframe {
   border: 1px solid #000000;
   text-align: center;
   height: auto;
+  width:20em;
   background-color: #f9f9f9;
   padding-bottom: 20px;
 }
